# Price-Alerts-API

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 37e7755e44fb_create_users.py  5ea75c444ee6_create_alerts.py  7583e0cde983_create_deliveries_table.py  7e728f67b66e_add_timezone_in_alert.py  e5e37c59e58f_create_alert_trigger.py
app/api/: deps.py  router.py
app/api/v1/: alerts.py  auth.py  prices.py
app/clients/: exchange.py  telegram.py  webhook.py
app/core/: config.py  redis.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  alert.py  alert_trigger.py  delivery.py  user.py
app/repositories/: alert_repo.py  delivery_repo.py  trigger_repo.py  user_repo.py
app/schemas/: alert.py  alert_trigger.py  auth.py  delivery.py  user.py
app/services/: alert_service.py  evaluator.py  notifier.py  price_service.py  user_service.py
app/workers/: poller.py  tasks.py
